@@ -1,5 +1,14 @@
 2011-06-01  Nick Alcock  <nick.alcock@oracle.com>
 
+	* include/sys/corectl.h: Solaris-specific, delete.
+	* include/sys/priv.h: Likewise.
+	* include/sys/procfs.h: Drop references.
+	* libproc/common/Pcontrol.c: Likewise.
+	(Pfree): Drop Solaris-specific coredump privilege state.
+	* libproc/common/Pcontrol.h: Likewise.
+
+2011-06-01  Nick Alcock  <nick.alcock@oracle.com>
+
 	* libproc/common/Pcontrol.c (Psetflags): Remove, unused.
 	* libproc/common/libproc.h: Likewise.
 	* libproc/common/mapfile-vers: Likewise.
